@@ -1,3 +1,13 @@
+2008-02-14  Ross Burton  <ross@burtonini.com>
+
+	* configure.ac:
+	Check for nautilus_burn_drive_can_eject.
+
+	* src/sj-main.c:
+	Use nautilus_burn_drive_can_eject to enable/disable the Eject button.
+
+	Thanks Dave Meikle (#430787).
+
 2008-02-13  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-extracting.c:
